Fix problems with pkg-config file gls.pc.
- Define exec_prefix.
- Avoid "Requires.private: glewmx", since this adds -DGLEW_MX to CFLAGS even
  when --static is not used (is this a bug in pkg-config?)
  Use "Libs.private" instead, but of course this has other problems...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,8 @@ if(GLS_BUILD_STATIC_LIB)
 endif()
 install(FILES gls/gls.h "${GLS_BINARY_DIR}/gls/gls_version.h" DESTINATION include)
 # pkg-config file: gls.pc
-set(prefix ${CMAKE_INSTALL_PREFIX})
+set(prefix "${CMAKE_INSTALL_PREFIX}")
+set(exec_prefix "\${prefix}")
 set(libdir "\${exec_prefix}/lib")
 set(includedir "\${prefix}/include")
 configure_file("${GLS_SOURCE_DIR}/gls.pc.in" "${GLS_BINARY_DIR}/gls.pc" @ONLY)
