Fix various CMakeLists.txt problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(GLS_LIB_SOVERSION "0")
 
 # Main target: libgls
 find_package(GLEWMX REQUIRED)
+find_package(OpenGL REQUIRED)
 find_package(X11)
 if(X11_FOUND)
   add_definitions(-DGLS_USE_GLX=1)
@@ -40,10 +41,7 @@ include_directories("${GLEWMX_INCLUDE_DIRS}" "${GLS_BINARY_DIR}" "${GLS_BINARY_D
 link_directories("${GLEWMX_LIBRARY_DIRS}")
 if(GLS_BUILD_SHARED_LIB)
   add_library(libgls_shared SHARED gls/gls.c gls/gls.glsl.h gls/gls.h gls/gls_version.h)
-  target_link_libraries(libgls_shared ${GLEWMX_LIBRARIES})
-  if(WIN32)
-    target_link_libraries(libgls_shared opengl32)
-  endif(WIN32)
+  target_link_libraries(libgls_shared ${GLEWMX_LIBRARIES} ${OPENGL_gl_LIBRARY})
   set_target_properties(libgls_shared PROPERTIES OUTPUT_NAME gls)
   set_target_properties(libgls_shared PROPERTIES VERSION ${GLS_LIB_VERSION})
   set_target_properties(libgls_shared PROPERTIES SOVERSION ${GLS_LIB_SOVERSION})  
@@ -54,7 +52,7 @@ if(GLS_BUILD_SHARED_LIB)
   )
 endif()
 if(GLS_BUILD_STATIC_LIB)
-  add_library(libgls_static STATIC gls/gls.c)
+  add_library(libgls_static STATIC gls/gls.c gls/gls.glsl.h gls/gls.h gls/gls_version.h)
   set_target_properties(libgls_static PROPERTIES OUTPUT_NAME gls)
   install(TARGETS libgls_static
     RUNTIME DESTINATION bin
@@ -62,12 +60,17 @@ if(GLS_BUILD_STATIC_LIB)
     ARCHIVE DESTINATION "lib"
   )
 endif()
-install(FILES gls/gls.h "${GLS_BINARY_DIR}/gls/gls_version.h" DESTINATION include)
+install(FILES gls/gls.h "${GLS_BINARY_DIR}/gls/gls_version.h" DESTINATION include/gls)
 # pkg-config file: gls.pc
 set(prefix "${CMAKE_INSTALL_PREFIX}")
 set(exec_prefix "\${prefix}")
 set(libdir "\${exec_prefix}/lib")
 set(includedir "\${prefix}/include")
+set(GLS_PKGCONFIG_LIBRARIES_PRIVATE "")
+foreach(GLS_PKGCONFIG_LIBRARY_PRIV ${GLEWMX_LIBRARIES})
+   set(GLS_PKGCONFIG_LIBRARIES_PRIVATE "${GLS_PKGCONFIG_LIBRARIES_PRIVATE} -l${GLS_PKGCONFIG_LIBRARY_PRIV}")
+endforeach()
+set(GLS_PKGCONFIG_LIBRARIES_PRIVATE "${GLS_PKGCONFIG_LIBRARIES_PRIVATE} -l${OPENGL_gl_LIBRARY}")
 configure_file("${GLS_SOURCE_DIR}/gls.pc.in" "${GLS_BINARY_DIR}/gls.pc" @ONLY)
 install(FILES "${GLS_BINARY_DIR}/gls.pc" DESTINATION lib/pkgconfig)
 
@@ -78,9 +81,9 @@ if(GLS_BUILD_TEST)
   set_target_properties(test_program PROPERTIES OUTPUT_NAME gls-test)
   include_directories("${GLUT_INCLUDE_DIR}" "${GLS_SOURCE_DIR}" "${GLS_BINARY_DIR}")
   if(GLS_BUILD_SHARED_LIB)
-    target_link_libraries(test_program libgls_shared ${GLUT_LIBRARIES})
+    target_link_libraries(test_program ${GLUT_LIBRARIES} ${OPENGL_gl_LIBRARY} libgls_shared)
   else()
-    target_link_libraries(test_program libgls_static ${GLUT_LIBRARIES} ${GLEWMX_LIBRARIES})
+    target_link_libraries(test_program ${GLUT_LIBRARIES} libgls_static ${GLEWMX_LIBRARIES} ${OPENGL_gl_LIBRARY})
   endif()
   install(TARGETS test_program RUNTIME DESTINATION bin)
 endif()
