--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,12 @@ endif()
 configure_file("${GLS_SOURCE_DIR}/gls/gls_version.h.in" "${GLS_BINARY_DIR}/gls/gls_version.h" @ONLY)
 include(StringifyShaders)
 stringify_shaders(gls/gls.glsl)
+add_custom_target(gls_glsl_h ALL DEPENDS "${GLS_BINARY_DIR}/gls/gls.glsl.h")
 include_directories("${GLEWMX_INCLUDE_DIRS}" "${GLS_BINARY_DIR}" "${GLS_BINARY_DIR}/gls")
 link_directories("${GLEWMX_LIBRARY_DIRS}")
 if(GLS_BUILD_SHARED_LIB)
-  add_library(libgls_shared SHARED gls/gls.c gls/gls.glsl.h gls/gls.h gls/gls_version.h)
+  add_library(libgls_shared SHARED gls/gls.c gls/gls.h gls/gls_version.h)
+  add_dependencies(libgls_shared gls_glsl_h)
   target_link_libraries(libgls_shared ${GLEWMX_LIBRARIES} ${OPENGL_gl_LIBRARY})
   set_target_properties(libgls_shared PROPERTIES OUTPUT_NAME gls)
   set_target_properties(libgls_shared PROPERTIES VERSION ${GLS_LIB_VERSION})
@@ -52,7 +54,8 @@ if(GLS_BUILD_SHARED_LIB)
   )
 endif()
 if(GLS_BUILD_STATIC_LIB)
-  add_library(libgls_static STATIC gls/gls.c gls/gls.glsl.h gls/gls.h gls/gls_version.h)
+  add_library(libgls_static STATIC gls/gls.c gls/gls.h gls/gls_version.h)
+  add_dependencies(libgls_static gls_glsl_h)
   set_target_properties(libgls_static PROPERTIES OUTPUT_NAME gls)
   install(TARGETS libgls_static
     RUNTIME DESTINATION bin
