Test program: only link to libm on UNIXish platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,9 +84,12 @@ if(GLS_BUILD_TEST)
   set_target_properties(test_program PROPERTIES OUTPUT_NAME gls-test)
   include_directories("${GLUT_INCLUDE_DIR}" "${GLS_SOURCE_DIR}" "${GLS_BINARY_DIR}")
   if(GLS_BUILD_SHARED_LIB)
-    target_link_libraries(test_program m ${GLUT_glut_LIBRARY} ${OPENGL_gl_LIBRARY} libgls_shared)
+    target_link_libraries(test_program ${GLUT_glut_LIBRARY} ${OPENGL_gl_LIBRARY} libgls_shared)
   else()
-    target_link_libraries(test_program m ${GLUT_glut_LIBRARY} libgls_static ${GLEWMX_LIBRARIES} ${OPENGL_gl_LIBRARY})
+    target_link_libraries(test_program ${GLUT_glut_LIBRARY} libgls_static ${GLEWMX_LIBRARIES} ${OPENGL_gl_LIBRARY})
+  endif()
+  if(UNIX)
+    target_link_libraries(test_program m)
   endif()
   install(TARGETS test_program RUNTIME DESTINATION bin)
 endif()
